Finished Dog Abilities
Small bug fixes

Altered Target Practice Enemy Prefab,
Player movement scripts
Cooldown manager

--- a/UnityProjectFolder/ProjectAtom/.vscode/settings.json
+++ b/UnityProjectFolder/ProjectAtom/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "csharpfixformat.style.braces.onSameLine": false,
-    "csharp.format.enable": false
+    "csharp.format.enable": false,
+    "git.ignoreLimitWarning": true
 }
